Prevent currency wrap on phones

--- a/src/themes/sap_fiori_3/library.css
+++ b/src/themes/sap_fiori_3/library.css
@@ -319,6 +319,7 @@
   background: #ffffff;
 }
 .kellojoMCurrency {
+  white-space: nowrap;
   color: #14b341;
 }
 .kellojoMCurrency .sapUiUfdCurrencyCurrency {
