--- a/src/themes/sap_fiori_3/src/Currency.less
+++ b/src/themes/sap_fiori_3/src/Currency.less
@@ -1,6 +1,8 @@
 
 
 .kellojoMCurrency {
+    white-space: nowrap;
+    
     .sapUiUfdCurrencyCurrency {
         width: unset;
     }
